@@ -1130,6 +1130,9 @@
 [508, 2044406843184]
 [274, 3873816255479006870044]
 [228, 34028236692093846346337460743176821665314]
+10
+10
+1267650600228229401496703205653
 121
 1
 [0, 0, 1, 0]
@@ -1198,4 +1201,4 @@ x + 2
 121
 187
 1
-Total time spent: 2600
+Total time spent: 3280
